--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -184,7 +184,7 @@
                     
                     Res_Entry: IfError(
                         ForAll(
-                            xmlData.Purchase_Line.Res_Entry As entry,
+                            xmlData.Sales_Line.Res_Entry As entry,
                             {
                                 Created_By: Text(entry.Created_By),
                                 Creation_Date: Text(entry.Creation_Date),
